@@ -1,0 +1,21 @@
+<n800>
+<device  width='1280' height='676' 
+         display_width='800' display_height='480' 
+         display_x='235' display_y='99' 
+         img='nokia-n800.png' />
+
+<button x='94' y='111' width='53' height='35' key='Up'/> 
+<button x='94' y='199' width='53' height='35' key='Down'/> 
+<button x='62' y='146' width='35' height='53' key='Left'/> 
+<button x='147' y='146' width='35' height='53' key='Right'/> 
+<button x='93' y='146' width='54' height='54' key='Return'/> 
+<button x='62' y='276' width='110' height='45' key='Escape'/> 
+<button x='62' y='333' width='110' height='45' key='F4'/> 
+<button x='62' y='390' width='110' height='45' key='F5'/> 
+<!--
+<button x='189' y='2' width='64' height='10' key='F8'/> 
+<button x='255' y='2' width='67' height='10' key='F6'/> 
+<button x='324' y='2' width='64' height='10' key='F7'/> 
+-->
+
+</n800>
